--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -51,6 +51,40 @@
   margin: 0 auto;
 }
 
+.container{
+	width: 599px;
+	background-color: black;
+	margin: 0 auto;
+
+	aspect-ratio: 599 / 463;
+}
+
+.container_img{
+	width: 100%;
+	height: 100%;
+}
+
+.parent{
+	width: 600px;
+	height: 600px;
+	background-color: aliceblue;
+	position: relative;
+	margin: 0 auto;
+}
+
+.child_img{
+	width: 30%;
+	height: 20%;
+	margin: 0 auto;
+	display: block;
+}
+@media only screen and (max-width: 1300px) {
+	.container{
+		width: 301px;
+		aspect-ratio: 301 / 247;
+	}
+}
+
 @media only screen and (max-width: 1200px) {
   html {
     font-size: 14px;
